# CR3

./: README.md  pyproject.toml
src/cr3/: main.py
